# LlamaCpp

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
android/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml  pubspec_overrides.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/llamacpp_example/: MainActivity.kt
example/android/app/src/main/kotlin/org/sjrobinsonconsulting/llamacpp/llamacpp_example/: MainActivity.kt
example/android/app/src/main/kotlin/org/sjrobinsonconsulting/llamacpp_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: llamacpp.podspec
ios/Classes/: llamacpp.c
lib/: llamacpp.dart
lib/src/: bindings.dart  chat_message.dart  llama_exception.dart  llamacpp.dart
lib/src/params/: context_params.dart  lcpp_params.dart  model_params.dart
linux/: CMakeLists.txt
macos/: llamacpp.podspec
scripts/: create-dmg.sh
src/: CMakeLists.txt  llamacpp.cpp  llamacpp.h
windows/: CMakeLists.binaries.txt  CMakeLists.txt
